@@ -106,6 +106,7 @@ simulation
 
    RfSensor class
       1) Updated serialize method
+      2) setSlotModeSingle() -- unref()'d the new Pair (fixed a "memory drip")
 
    RfSystem class
       1) Updated serialize method
@@ -124,6 +125,7 @@ simulation
 
    TrackManager class
       1) converted several local member function arrays to class member arrays.
+      2) Corrected the usage of the boolean matrixes 'report2TrackMatch' from int to bool
 
    Weapon class
       1) added storage for target velocity data
